--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,12 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "ROS: Launch",
+            "type": "ros",
+            "request": "launch",
+            "target": "/home/r/catkin_wss/pfilter_ws/src/PFilter-noetic/launch/pfilter_kitti.launch"
+        },     
+      ]
 }
