该版本的时间还有不对齐的问题……

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,9 @@
     ],
     "python.analysis.extraPaths": [
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
